Added delete chat route
